--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-From source code original posted here by Ruud Bijnen:
+From source code originally posted here by Ruud Bijnen:
 
 http://www.ruudbijnen.nl/blog/2010/09/blending-textures-in-a-shader/#comments
 
